fix align of ajax show pic

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -113,6 +113,8 @@ padding-bottom:5%;}
 #show-details .pro-text h1, h2, h3, h4{color:#FFA500;}
 #show-details .pro-text:hover {width:55%; overflow-y:scroll}
 #show-details .pro-pic { width:25%; margin-right:2% ; text-align:left}
+#show-details .pro-pic .product-photo{ width:95%; margin:1% ; text-align:center; }
+#show-details .pro-pic .product-photo img{border:#000 2px solid; border-radius:5px;}
 .fancybox-title h4 {color:#F6F6A8;}
  
 #google-search {width:30%; float:left}
